EMOTION模块添加
